dark mode for basic

--- a/Website/static/basic.css
+++ b/Website/static/basic.css
@@ -226,3 +226,8 @@
 .shifted {
     transform: translateX(65px); /* Adjust based on the width of the side panel */
 }
+
+/* dark mode */
+.dark-mode .chart-container h2 {
+    color: black;
+}
