dark mode tweaked

--- a/Website/static/searched_movieDashboard.css
+++ b/Website/static/searched_movieDashboard.css
@@ -225,3 +225,7 @@
 .shifted {
     transform: translateX(65px); /* Adjust based on the width of the side panel */
 }
+
+.dark-mode .chart-container h2 {
+    color: black;
+}
